--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -65,7 +65,7 @@
     <a href="/enquiry_summary">Summary</a>
 
     <h2>Production</h2>
-    <a href="/production_project">New Project</a>
+    <a href="/production_new_project">New Project</a>
     <a href="/production_progress">Progress Table</a>
     <a href="/production_summary">Summary</a>
     <a href="/sheet_cutting">Sheet Cutting</a>
