--- a/templates/login.html
+++ b/templates/login.html
@@ -73,7 +73,7 @@
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit" class="btn">Login</button>
         </form>
-        <a href="{{ url_for('register') }}" class="register-link">Register as Vendor</a>
+        <a href="{{ url_for('vendor_registration') }}" class="register-link">Register as Vendor</a>
     </div>
 </body>
 </html>
