--- a/templates/login.html
+++ b/templates/login.html
@@ -68,7 +68,7 @@
         {% if error %}
             <div class="error">{{ error }}</div>
         {% endif %}
-        <form method="POST" action="/login">
+        <form method="POST" action="/">
             <input type="text" name="username" placeholder="Username" required>
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit" class="btn">Login</button>
